--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
         <div>
             <h1>🚀 Mis Metas 2026</h1>
         </div>
+        <div>Para mi niña Aliss - Shulla</div>
         <div class="date-badge" id="currentDate"></div>
     </header>
 
